--- a/dl/notebooks/01_딥러닝 기초/09. 오차 역전파를 이용한 신경망 구현.ipynb
+++ b/dl/notebooks/01_딥러닝 기초/09. 오차 역전파를 이용한 신경망 구현.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "       [0., 3.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "       [ 0.,  3.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,9 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras import datasets  # type: ignore\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -415,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,30 +453,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 ==> Train Accuracy : 0.133383 / Test Accuracy : 0.137300 / Train Loss : 2.298055 / Test Loss : 2.301385 \n",
-      "Epoch 1 ==> Train Accuracy : 0.905817 / Test Accuracy : 0.910000 / Train Loss : 0.278399 / Test Loss : 0.315642 \n",
-      "Epoch 2 ==> Train Accuracy : 0.926500 / Test Accuracy : 0.926200 / Train Loss : 0.287883 / Test Loss : 0.258877 \n",
-      "Epoch 3 ==> Train Accuracy : 0.940083 / Test Accuracy : 0.940500 / Train Loss : 0.189863 / Test Loss : 0.210731 \n",
-      "Epoch 4 ==> Train Accuracy : 0.947867 / Test Accuracy : 0.946400 / Train Loss : 0.169894 / Test Loss : 0.187066 \n",
-      "Epoch 5 ==> Train Accuracy : 0.954183 / Test Accuracy : 0.951900 / Train Loss : 0.268840 / Test Loss : 0.164436 \n",
-      "Epoch 6 ==> Train Accuracy : 0.961250 / Test Accuracy : 0.957500 / Train Loss : 0.091366 / Test Loss : 0.143271 \n",
-      "Epoch 7 ==> Train Accuracy : 0.965000 / Test Accuracy : 0.961700 / Train Loss : 0.065981 / Test Loss : 0.129113 \n",
-      "Epoch 8 ==> Train Accuracy : 0.969000 / Test Accuracy : 0.964100 / Train Loss : 0.040701 / Test Loss : 0.119296 \n",
-      "Epoch 9 ==> Train Accuracy : 0.972200 / Test Accuracy : 0.966800 / Train Loss : 0.041812 / Test Loss : 0.112650 \n",
-      "Epoch 10 ==> Train Accuracy : 0.973400 / Test Accuracy : 0.968900 / Train Loss : 0.028775 / Test Loss : 0.106649 \n",
-      "Epoch 11 ==> Train Accuracy : 0.975367 / Test Accuracy : 0.968500 / Train Loss : 0.132269 / Test Loss : 0.105860 \n",
-      "Epoch 12 ==> Train Accuracy : 0.977200 / Test Accuracy : 0.971500 / Train Loss : 0.135360 / Test Loss : 0.097029 \n",
-      "Epoch 13 ==> Train Accuracy : 0.979367 / Test Accuracy : 0.972700 / Train Loss : 0.035715 / Test Loss : 0.095156 \n",
-      "Epoch 14 ==> Train Accuracy : 0.979800 / Test Accuracy : 0.970800 / Train Loss : 0.045090 / Test Loss : 0.097631 \n",
-      "Epoch 15 ==> Train Accuracy : 0.981450 / Test Accuracy : 0.973600 / Train Loss : 0.044383 / Test Loss : 0.088851 \n",
-      "Epoch 16 ==> Train Accuracy : 0.983017 / Test Accuracy : 0.973500 / Train Loss : 0.068663 / Test Loss : 0.088964 \n"
+      "Epoch 0 ==> Train Accuracy : 0.116483 / Test Accuracy : 0.117200 / Train Loss : 2.300136 / Test Loss : 2.302532 \n",
+      "Epoch 1 ==> Train Accuracy : 0.902117 / Test Accuracy : 0.906300 / Train Loss : 0.384542 / Test Loss : 0.313861 \n",
+      "Epoch 2 ==> Train Accuracy : 0.928083 / Test Accuracy : 0.927300 / Train Loss : 0.224303 / Test Loss : 0.244362 \n",
+      "Epoch 3 ==> Train Accuracy : 0.941517 / Test Accuracy : 0.939900 / Train Loss : 0.129607 / Test Loss : 0.207493 \n",
+      "Epoch 4 ==> Train Accuracy : 0.948483 / Test Accuracy : 0.945700 / Train Loss : 0.115185 / Test Loss : 0.182400 \n",
+      "Epoch 5 ==> Train Accuracy : 0.955400 / Test Accuracy : 0.951400 / Train Loss : 0.074273 / Test Loss : 0.162393 \n",
+      "Epoch 6 ==> Train Accuracy : 0.961617 / Test Accuracy : 0.957600 / Train Loss : 0.073201 / Test Loss : 0.141216 \n",
+      "Epoch 7 ==> Train Accuracy : 0.964700 / Test Accuracy : 0.960200 / Train Loss : 0.078577 / Test Loss : 0.132643 \n",
+      "Epoch 8 ==> Train Accuracy : 0.967733 / Test Accuracy : 0.962100 / Train Loss : 0.168717 / Test Loss : 0.125961 \n",
+      "Epoch 9 ==> Train Accuracy : 0.971683 / Test Accuracy : 0.965400 / Train Loss : 0.079926 / Test Loss : 0.114706 \n",
+      "Epoch 10 ==> Train Accuracy : 0.972933 / Test Accuracy : 0.966700 / Train Loss : 0.113468 / Test Loss : 0.110970 \n",
+      "Epoch 11 ==> Train Accuracy : 0.974367 / Test Accuracy : 0.968800 / Train Loss : 0.045148 / Test Loss : 0.104049 \n",
+      "Epoch 12 ==> Train Accuracy : 0.978233 / Test Accuracy : 0.970800 / Train Loss : 0.034492 / Test Loss : 0.098108 \n",
+      "Epoch 13 ==> Train Accuracy : 0.979483 / Test Accuracy : 0.970400 / Train Loss : 0.104259 / Test Loss : 0.096881 \n",
+      "Epoch 14 ==> Train Accuracy : 0.980550 / Test Accuracy : 0.973400 / Train Loss : 0.027217 / Test Loss : 0.091688 \n",
+      "Epoch 15 ==> Train Accuracy : 0.982017 / Test Accuracy : 0.972900 / Train Loss : 0.026042 / Test Loss : 0.088819 \n",
+      "Epoch 16 ==> Train Accuracy : 0.983517 / Test Accuracy : 0.974000 / Train Loss : 0.083292 / Test Loss : 0.085660 \n"
      ]
     }
    ],
@@ -533,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
