--- a/dl/notebooks/02_PyTorch/04. PyTorch Model Training & Validation.ipynb
+++ b/dl/notebooks/02_PyTorch/04. PyTorch Model Training & Validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +34,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MPS 가속을 사용합니다.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
-    "def select_device():\n",
-    "    if torch.backends.mps.is_available():\n",
-    "        device = \"mps\"\n",
-    "        print(\"MPS 가속을 사용합니다.\")\n",
-    "    else:\n",
-    "        device = torch.device(\"cpu\")\n",
-    "        print(\"MPS 가속을 사용할 수 없습니다. CPU를 사용합니다.\")\n",
     "\n",
-    "# select_device()\n",
-    "device = torch.device(\"cpu\")"
+    "if torch.backends.mps.is_available():\n",
+    "    device = \"mps\"\n",
+    "    print(\"MPS 가속을 사용합니다.\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "    print(\"MPS 가속을 사용할 수 없습니다. CPU를 사용합니다.\")\n",
+    "\n",
+    "# device = torch.device(\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -246,153 +253,153 @@
      "text": [
       "Epochs 1\n",
       "..................\n",
-      "Train Loss : 2.281793 [     0 / 60000 ]\n",
-      "Train Loss : 1.438720 [  6400 / 60000 ]\n",
-      "Train Loss : 1.018364 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.903798 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.763800 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.819863 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.668227 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.657638 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.708049 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.621674 [ 57600 / 60000 ]\n",
+      "Train Loss : 2.322644 [     0 / 60000 ]\n",
+      "Train Loss : 1.564183 [  6400 / 60000 ]\n",
+      "Train Loss : 1.128416 [ 12800 / 60000 ]\n",
+      "Train Loss : 1.021525 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.770508 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.672511 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.644357 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.635989 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.587226 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.480518 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 78.9%, Avg Loss : 0.628503\n",
+      " Accuracy : 78.5%, Avg Loss : 0.630207\n",
       "\n",
       "Epochs 2\n",
       "..................\n",
-      "Train Loss : 0.501942 [     0 / 60000 ]\n",
-      "Train Loss : 0.592810 [  6400 / 60000 ]\n",
-      "Train Loss : 0.563680 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.394578 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.536491 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.510127 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.672792 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.482456 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.598024 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.454794 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.589777 [     0 / 60000 ]\n",
+      "Train Loss : 0.628243 [  6400 / 60000 ]\n",
+      "Train Loss : 0.516036 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.682999 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.572935 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.421131 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.482102 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.570246 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.546395 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.546354 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 81.4%, Avg Loss : 0.539282\n",
+      " Accuracy : 81.6%, Avg Loss : 0.538733\n",
       "\n",
       "Epochs 3\n",
       "..................\n",
-      "Train Loss : 0.458509 [     0 / 60000 ]\n",
-      "Train Loss : 0.644007 [  6400 / 60000 ]\n",
-      "Train Loss : 0.569939 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.529685 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.548850 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.311611 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.436192 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.545638 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.314547 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.494705 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.436993 [     0 / 60000 ]\n",
+      "Train Loss : 0.464249 [  6400 / 60000 ]\n",
+      "Train Loss : 0.459811 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.553196 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.420749 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.385661 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.532240 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.512001 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.426991 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.393352 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 82.8%, Avg Loss : 0.496547\n",
+      " Accuracy : 83.0%, Avg Loss : 0.496582\n",
       "\n",
       "Epochs 4\n",
       "..................\n",
-      "Train Loss : 0.445118 [     0 / 60000 ]\n",
-      "Train Loss : 0.489953 [  6400 / 60000 ]\n",
-      "Train Loss : 0.517768 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.429690 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.309228 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.828260 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.430726 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.509284 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.449072 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.306893 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.397811 [     0 / 60000 ]\n",
+      "Train Loss : 0.351192 [  6400 / 60000 ]\n",
+      "Train Loss : 0.417951 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.514547 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.352419 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.524034 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.596367 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.359611 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.296683 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.682919 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 83.5%, Avg Loss : 0.477268\n",
+      " Accuracy : 83.2%, Avg Loss : 0.476999\n",
       "\n",
       "Epochs 5\n",
       "..................\n",
-      "Train Loss : 0.628816 [     0 / 60000 ]\n",
-      "Train Loss : 0.413130 [  6400 / 60000 ]\n",
-      "Train Loss : 0.351011 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.432885 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.504452 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.327160 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.455594 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.587074 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.472151 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.379870 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.430919 [     0 / 60000 ]\n",
+      "Train Loss : 0.459141 [  6400 / 60000 ]\n",
+      "Train Loss : 0.541201 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.270785 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.329016 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.353999 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.435707 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.352455 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.319293 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.565377 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 83.8%, Avg Loss : 0.460504\n",
+      " Accuracy : 83.7%, Avg Loss : 0.459831\n",
       "\n",
       "Epochs 6\n",
       "..................\n",
-      "Train Loss : 0.544599 [     0 / 60000 ]\n",
-      "Train Loss : 0.492909 [  6400 / 60000 ]\n",
-      "Train Loss : 0.342947 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.460260 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.473596 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.470170 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.573705 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.466172 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.559768 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.234506 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.485514 [     0 / 60000 ]\n",
+      "Train Loss : 0.336467 [  6400 / 60000 ]\n",
+      "Train Loss : 0.389297 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.444385 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.319682 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.439162 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.309463 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.564958 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.316228 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.470361 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 84.4%, Avg Loss : 0.449899\n",
+      " Accuracy : 83.8%, Avg Loss : 0.456105\n",
       "\n",
       "Epochs 7\n",
       "..................\n",
-      "Train Loss : 0.267887 [     0 / 60000 ]\n",
-      "Train Loss : 0.399963 [  6400 / 60000 ]\n",
-      "Train Loss : 0.445135 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.229036 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.404605 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.451396 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.264250 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.337979 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.806718 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.505624 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.380549 [     0 / 60000 ]\n",
+      "Train Loss : 0.422735 [  6400 / 60000 ]\n",
+      "Train Loss : 0.587097 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.377634 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.254230 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.420574 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.410141 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.487576 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.425355 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.309993 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 84.7%, Avg Loss : 0.439425\n",
+      " Accuracy : 84.6%, Avg Loss : 0.436143\n",
       "\n",
       "Epochs 8\n",
       "..................\n",
-      "Train Loss : 0.499355 [     0 / 60000 ]\n",
-      "Train Loss : 0.591770 [  6400 / 60000 ]\n",
-      "Train Loss : 0.376090 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.378932 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.457505 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.318400 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.366735 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.341485 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.324422 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.407577 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.289455 [     0 / 60000 ]\n",
+      "Train Loss : 0.492617 [  6400 / 60000 ]\n",
+      "Train Loss : 0.340204 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.407094 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.431901 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.147657 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.323784 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.262450 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.295730 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.319123 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 84.6%, Avg Loss : 0.439579\n",
+      " Accuracy : 84.7%, Avg Loss : 0.429779\n",
       "\n",
       "Epochs 9\n",
       "..................\n",
-      "Train Loss : 0.548436 [     0 / 60000 ]\n",
-      "Train Loss : 0.415175 [  6400 / 60000 ]\n",
-      "Train Loss : 0.477706 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.334618 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.593325 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.408217 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.442966 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.284376 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.459068 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.433729 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.205908 [     0 / 60000 ]\n",
+      "Train Loss : 0.403312 [  6400 / 60000 ]\n",
+      "Train Loss : 0.251180 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.293389 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.572662 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.318975 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.540707 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.320238 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.247194 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.339186 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 84.7%, Avg Loss : 0.429594\n",
+      " Accuracy : 85.0%, Avg Loss : 0.422200\n",
       "\n",
       "Epochs 10\n",
       "..................\n",
-      "Train Loss : 0.294226 [     0 / 60000 ]\n",
-      "Train Loss : 0.587758 [  6400 / 60000 ]\n",
-      "Train Loss : 0.392440 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.276413 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.240149 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.405097 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.396625 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.413991 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.451086 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.305101 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.572541 [     0 / 60000 ]\n",
+      "Train Loss : 0.381614 [  6400 / 60000 ]\n",
+      "Train Loss : 0.503358 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.419890 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.516720 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.342155 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.291165 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.313345 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.255781 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.359113 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 85.2%, Avg Loss : 0.420996\n",
+      " Accuracy : 85.2%, Avg Loss : 0.419098\n",
       "\n",
       "Experiment Successful\n"
      ]
@@ -426,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
