--- a/dl/notebooks/02_PyTorch/03. PyTorch Modeling.ipynb
+++ b/dl/notebooks/02_PyTorch/03. PyTorch Modeling.ipynb
@@ -66,7 +66,9 @@
     "        super(NeuralNetwork, self).__init__()\n",
     "\n",
     "        # 생성자에는 항상 레이어의 구성을 정의\n",
-    "        self.flatten = nn.Flatten()  # 입력되는 3차원 데이터를 평탄화\n",
+    "        self.flatten = (\n",
+    "            nn.Flatten()\n",
+    "        )  # Flatten 클래스를 이용해 입력되는 3차원 데이터를 평탄화\n",
     "\n",
     "        # nn.Sequential 을 이용해 연속되는 레이어의 구조를 구성\n",
     "        self.linear_relu_stack = nn.Sequential(\n",
@@ -171,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
