--- a/dl/notebooks/02_PyTorch/04. PyTorch Model Training & Validation.ipynb
+++ b/dl/notebooks/02_PyTorch/04. PyTorch Model Training & Validation.ipynb
@@ -164,6 +164,7 @@
     "def train_loop(dataloader, model, loss_fn, optimizer):\n",
     "    size = len(dataloader.dataset)\n",
     "    # 모델을 훈련 모드로 설정\n",
+    "    # 훈련 / 평가 모드에 따라 batch normalization, dropout 설정됨\n",
     "    model.train()\n",
     "\n",
     "    # 데이터 꺼내기. for문을 사용하면 자동으로 next(iter(dataloader))가 실행됨\n",
@@ -174,6 +175,7 @@
     "\n",
     "        # 순전파 수행\n",
     "        pred = model(X)\n",
+    "        # functional object => 객체를 함수처럼 사용할 수 있도록 지원, model 의 forward 메서드 실행됨\n",
     "\n",
     "        # 손실 계산\n",
     "        loss = loss_fn(pred, y)  # 자동으로 Softmax 적용\n",
@@ -253,153 +255,153 @@
      "text": [
       "Epochs 1\n",
       "..................\n",
-      "Train Loss : 2.322644 [     0 / 60000 ]\n",
-      "Train Loss : 1.564183 [  6400 / 60000 ]\n",
-      "Train Loss : 1.128416 [ 12800 / 60000 ]\n",
-      "Train Loss : 1.021525 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.770508 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.672511 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.644357 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.635989 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.587226 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.480518 [ 57600 / 60000 ]\n",
+      "Train Loss : 2.305701 [     0 / 60000 ]\n",
+      "Train Loss : 1.421519 [  6400 / 60000 ]\n",
+      "Train Loss : 1.079497 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.889530 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.738385 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.633459 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.747629 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.562482 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.622091 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.711647 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 78.5%, Avg Loss : 0.630207\n",
+      " Accuracy : 78.6%, Avg Loss : 0.634311\n",
       "\n",
       "Epochs 2\n",
       "..................\n",
-      "Train Loss : 0.589777 [     0 / 60000 ]\n",
-      "Train Loss : 0.628243 [  6400 / 60000 ]\n",
-      "Train Loss : 0.516036 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.682999 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.572935 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.421131 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.482102 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.570246 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.546395 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.546354 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.523972 [     0 / 60000 ]\n",
+      "Train Loss : 0.586857 [  6400 / 60000 ]\n",
+      "Train Loss : 0.466648 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.639967 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.691081 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.622021 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.326602 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.476743 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.431651 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.515476 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 81.6%, Avg Loss : 0.538733\n",
+      " Accuracy : 81.0%, Avg Loss : 0.541848\n",
       "\n",
       "Epochs 3\n",
       "..................\n",
-      "Train Loss : 0.436993 [     0 / 60000 ]\n",
-      "Train Loss : 0.464249 [  6400 / 60000 ]\n",
-      "Train Loss : 0.459811 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.553196 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.420749 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.385661 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.532240 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.512001 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.426991 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.393352 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.536475 [     0 / 60000 ]\n",
+      "Train Loss : 0.510638 [  6400 / 60000 ]\n",
+      "Train Loss : 0.529681 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.522293 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.513629 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.472507 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.435616 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.359752 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.595041 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.573065 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 83.0%, Avg Loss : 0.496582\n",
+      " Accuracy : 82.6%, Avg Loss : 0.500797\n",
       "\n",
       "Epochs 4\n",
       "..................\n",
-      "Train Loss : 0.397811 [     0 / 60000 ]\n",
-      "Train Loss : 0.351192 [  6400 / 60000 ]\n",
-      "Train Loss : 0.417951 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.514547 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.352419 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.524034 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.596367 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.359611 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.296683 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.682919 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.584914 [     0 / 60000 ]\n",
+      "Train Loss : 0.608957 [  6400 / 60000 ]\n",
+      "Train Loss : 0.303192 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.478701 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.540139 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.318670 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.349759 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.418847 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.331848 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.525086 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 83.2%, Avg Loss : 0.476999\n",
+      " Accuracy : 83.3%, Avg Loss : 0.480156\n",
       "\n",
       "Epochs 5\n",
       "..................\n",
-      "Train Loss : 0.430919 [     0 / 60000 ]\n",
-      "Train Loss : 0.459141 [  6400 / 60000 ]\n",
-      "Train Loss : 0.541201 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.270785 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.329016 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.353999 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.435707 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.352455 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.319293 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.565377 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.463647 [     0 / 60000 ]\n",
+      "Train Loss : 0.561077 [  6400 / 60000 ]\n",
+      "Train Loss : 0.396378 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.389540 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.561657 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.529976 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.416832 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.311503 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.519886 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.375641 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 83.7%, Avg Loss : 0.459831\n",
+      " Accuracy : 83.3%, Avg Loss : 0.468995\n",
       "\n",
       "Epochs 6\n",
       "..................\n",
-      "Train Loss : 0.485514 [     0 / 60000 ]\n",
-      "Train Loss : 0.336467 [  6400 / 60000 ]\n",
-      "Train Loss : 0.389297 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.444385 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.319682 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.439162 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.309463 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.564958 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.316228 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.470361 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.309262 [     0 / 60000 ]\n",
+      "Train Loss : 0.362450 [  6400 / 60000 ]\n",
+      "Train Loss : 0.407101 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.450104 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.448180 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.600607 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.400559 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.470436 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.387735 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.517234 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 83.8%, Avg Loss : 0.456105\n",
+      " Accuracy : 83.8%, Avg Loss : 0.455659\n",
       "\n",
       "Epochs 7\n",
       "..................\n",
-      "Train Loss : 0.380549 [     0 / 60000 ]\n",
-      "Train Loss : 0.422735 [  6400 / 60000 ]\n",
-      "Train Loss : 0.587097 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.377634 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.254230 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.420574 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.410141 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.487576 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.425355 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.309993 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.233442 [     0 / 60000 ]\n",
+      "Train Loss : 0.351844 [  6400 / 60000 ]\n",
+      "Train Loss : 0.425056 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.502453 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.307802 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.448521 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.447774 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.505047 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.321315 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.450925 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 84.6%, Avg Loss : 0.436143\n",
+      " Accuracy : 84.2%, Avg Loss : 0.442920\n",
       "\n",
       "Epochs 8\n",
       "..................\n",
-      "Train Loss : 0.289455 [     0 / 60000 ]\n",
-      "Train Loss : 0.492617 [  6400 / 60000 ]\n",
-      "Train Loss : 0.340204 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.407094 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.431901 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.147657 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.323784 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.262450 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.295730 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.319123 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.280981 [     0 / 60000 ]\n",
+      "Train Loss : 0.422197 [  6400 / 60000 ]\n",
+      "Train Loss : 0.453578 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.434178 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.423585 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.243742 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.309105 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.779245 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.329038 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.451233 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 84.7%, Avg Loss : 0.429779\n",
+      " Accuracy : 84.3%, Avg Loss : 0.441229\n",
       "\n",
       "Epochs 9\n",
       "..................\n",
-      "Train Loss : 0.205908 [     0 / 60000 ]\n",
-      "Train Loss : 0.403312 [  6400 / 60000 ]\n",
-      "Train Loss : 0.251180 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.293389 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.572662 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.318975 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.540707 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.320238 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.247194 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.339186 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.255817 [     0 / 60000 ]\n",
+      "Train Loss : 0.438506 [  6400 / 60000 ]\n",
+      "Train Loss : 0.284776 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.407873 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.546758 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.362519 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.325106 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.468634 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.498827 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.378013 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 85.0%, Avg Loss : 0.422200\n",
+      " Accuracy : 84.8%, Avg Loss : 0.428782\n",
       "\n",
       "Epochs 10\n",
       "..................\n",
-      "Train Loss : 0.572541 [     0 / 60000 ]\n",
-      "Train Loss : 0.381614 [  6400 / 60000 ]\n",
-      "Train Loss : 0.503358 [ 12800 / 60000 ]\n",
-      "Train Loss : 0.419890 [ 19200 / 60000 ]\n",
-      "Train Loss : 0.516720 [ 25600 / 60000 ]\n",
-      "Train Loss : 0.342155 [ 32000 / 60000 ]\n",
-      "Train Loss : 0.291165 [ 38400 / 60000 ]\n",
-      "Train Loss : 0.313345 [ 44800 / 60000 ]\n",
-      "Train Loss : 0.255781 [ 51200 / 60000 ]\n",
-      "Train Loss : 0.359113 [ 57600 / 60000 ]\n",
+      "Train Loss : 0.312040 [     0 / 60000 ]\n",
+      "Train Loss : 0.402130 [  6400 / 60000 ]\n",
+      "Train Loss : 0.347902 [ 12800 / 60000 ]\n",
+      "Train Loss : 0.315217 [ 19200 / 60000 ]\n",
+      "Train Loss : 0.345339 [ 25600 / 60000 ]\n",
+      "Train Loss : 0.472391 [ 32000 / 60000 ]\n",
+      "Train Loss : 0.394990 [ 38400 / 60000 ]\n",
+      "Train Loss : 0.319144 [ 44800 / 60000 ]\n",
+      "Train Loss : 0.417573 [ 51200 / 60000 ]\n",
+      "Train Loss : 0.395646 [ 57600 / 60000 ]\n",
       "Test Error : \n",
-      " Accuracy : 85.2%, Avg Loss : 0.419098\n",
+      " Accuracy : 85.3%, Avg Loss : 0.420472\n",
       "\n",
       "Experiment Successful\n"
      ]
