--- a/dl/notebooks/02_PyTorch/05. Model Save & Load.ipynb
+++ b/dl/notebooks/02_PyTorch/05. Model Save & Load.ipynb
@@ -65,7 +65,7 @@
     "        super(NeuralNetwork, self).__init__()\n",
     "\n",
     "        # 레이어 정의\n",
-    "        self.flatten = nn.Flatten()\n",
+    "        self.flatten = nn.Flatten()  # nn 내의 Flatten 클래스 이용\n",
     "\n",
     "        self.linear_relu_stack = nn.Sequential(\n",
     "            nn.Linear(28 * 28, 128), nn.ReLU(), nn.Linear(128, 10)\n",
@@ -106,7 +106,7 @@
     "else:\n",
     "    device = \"cpu\"\n",
     "\n",
-    "device = \"cpu\"\n",
+    "# device = \"cpu\"\n",
     "\n",
     "print(device)"
    ]
